deploy/nexodus/base/apiserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiserver
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: apiserver
          image: quay.io/nexodus/apiserver:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 200Mi
          ports:
            - containerPort: 8080
              name: web
            - containerPort: 5080
              name: ext-authz
      restartPolicy: Always
