deploy/nexodus/base/apiserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiserver
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/component: apiserver
    app.kubernetes.io/instance: apiserver
    app.kubernetes.io/name: apiserver
  ports:
    - name: web
      port: 8080
      targetPort: 8080
