deploy/nexodus/base/apiserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apiproxy
  annotations:
    cert-manager.io/issuer: nexodus-issuer
spec:
  tls:
    - hosts:
        - api.try.nexodus.local
      secretName: nexodus-api-cert
  rules:
    - host: api.try.nexodus.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: apiserver
                port:
                  number: 8080
